<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SecondBike</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="back">返回</string>
    <string name="cancel">取消</string>
    <string name="certain">确定</string>
    <string name="fogetpwd">忘记密码</string>
    <string name="login_in">登录</string>
    <string name="zhuce">注册</string>
    <string name="username">用户名:</string>
    <string name="passwd">密　码:</string>
    <string name="exit">退出</string>
    <string name="carlibary">车库</string>
    <string name="showye">首页</string>
    <string name="mine">我的</string>
    <string name="about">关于我们</string>
    <string name="jcgx">检查更新</string>
    <string name="yjfk">意见反馈</string>
    <string name="lxkf">联系客服</string>
    <string name="gwdf">给我打分</string>
    <string name="brand">品牌</string>
    <string name="price">价格:</string>
    <string name="history_look">浏览历史</string>
    <string name="carname">车名</string>
    <string name="price_car">价格：</string>
    <string name="rentlabel">可租</string>
    <string name="rentmonry">租金(月):</string>
    <string name="cardetail">商品详情-></string>
    <string name="curpwd">输入当前密码</string>
    <string name="newpwd">输入新密码</string>
    <string name="againpwd">再次确认新密码</string>
    <string name="changepwd">修改密码</string>
    <string name="rememberpwd">记住密码</string>
    <string name="autologin">自动登录</string>
    <string name="foget">忘记密码？</string>
    <string name="phonenum">手机号：</string>
    <string name="code">验证码 ：</string>
    <string name="getcode">获取验证码 </string>
    <string name="resetpwd">重置密码</string>
    <string name="next">下一步</string>
    <string name="title_activity_next">NextActivity</string>
    <string name="title_activity_bro_history">BroHistoryActivity</string>
    <string name="title_activity_fenlei">FenleiActivity</string>
    <string name="title_activity_car_detail">CarDetailActivity</string>
    <string name="title_activity_my_account">MyAccountActivity</string>
    <string name="title_activity_guoche">GuocheActivity</string>
    <string name="title_activity_qiuche">QiucheActivity</string>
    <string name="title_activity_mydeal">MydealActivity</string>
    <string name="title_activity_appearance">AppearanceActivity</string>
    <string name="title_activity_suggest">SuggestActivity</string>
    <string name="title_activity_score_us">ScoreUsActivity</string>
    <string name="title_activity_identify">IdentifyActivity</string>
    <string name="title_activity_secu_phone">SecuPhoneActivity</string>
    <string name="title_activity_change_phone">ChangePhoneActivity</string>
    <string name="title_activity_yan_zheng">YanZhengActivity</string>
    <string name="title_activity_result">ResultActivity</string>
    <string name="title_activity_clear">ClearActivity</string>
    <string name="title_activity_xiugai_account">XiugaiAccountActivity</string>

    <string-array name="gender">
        <item>男</item>
        <item>女</item>
    </string-array>

    <string name="title_activity_my_faovr">MyFaovrActivity</string>
    <string name="title_activity_blink">BlinkActivity</string>
    <string name="title_activity_byan_zheng">BYanZhengActivity</string>
    <string name="title_activity_bresult">BResultActivity</string>
    <string name="title_activity_ch_pwd">ChPWDActivity</string>
    <string name="title_activity_contact_solder">ContactSolderActivity</string>

</resources>