<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ffffff"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/title"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:background="@drawable/bg_4"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tv_friend_title"
            android:layout_width="match_parent"
            android:layout_height="50dip"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="#ffffff"
            android:textSize="20dip" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_margin="5dp"
        android:gravity="center"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="#ffffff"
            android:src="@drawable/tubiao" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/editRel"
        android:layout_width="fill_parent"
        android:layout_marginRight="10dp"
        android:layout_height="wrap_content" >

        <RelativeLayout
            android:id="@+id/accountRel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:background="#ffffff"
            android:clickable="true"
            android:gravity="center_vertical" >

            <TextView
                android:id="@+id/account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/user"
                android:gravity="fill_vertical"
                android:textColor="#000"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/accountEdittext"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/account"
                android:hint="不超过７个汉字１４个字符"
                android:inputType="text"
                android:maxLength="14"
                android:singleLine="true"
                android:textSize="18sp" />
			<requestFocus />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/pwdRel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/accountRel"
            android:background="#ffffff"
            android:clickable="true"
            android:gravity="center_vertical" >

            <TextView
                android:id="@+id/pwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/passwd"
                android:textColor="#000"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/pwdEdittext"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/pwd"
                android:hint="数字和字符，6~14位"
                android:inputType="textPassword"
                android:maxLength="14"
                android:singleLine="true"
                android:textSize="18sp" />
        </RelativeLayout>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal" >

        <CheckBox
            android:id="@+id/savepwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/rememberpwd"
            android:textSize="14sp" />

        <CheckBox
            android:id="@+id/autologin_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/autologin"
            android:textSize="14sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp" >

            <TextView
                android:id="@+id/fogetpwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:text="@string/foget"
                android:textColor="#008001"
                android:textSize="12sp" />
        </RelativeLayout>
    </LinearLayout>

    <Button
        android:id="@+id/login_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_in"
        android:textColor="#2b86e3"
        android:textSize="20sp" />

    <Button
        android:id="@+id/cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/exit"
        android:textColor="#2b86e3"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/zhuce"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="还没有账号？免费注册"
        android:gravity="right"
        android:textColor="#008001"
        android:textSize="15sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center|bottom"
        android:layout_marginBottom="10dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="官网:www.SecondBike.com"
            android:textSize="12sp" />
    </LinearLayout>

</LinearLayout>