<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical"
    tools:context="com.secondbike.about.MainActivity" >

    <LinearLayout
        android:id="@+id/title"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:background="@drawable/bg_4"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/cancel"
            android:layout_width="65.83dp"
            android:layout_height="30.5dp"
            android:layout_marginLeft="10dp"
            android:background="@drawable/btn"
            android:text="@string/back"
            android:textColor="#ffff"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tv_friend_title"
            android:layout_width="wrap_content"
            android:layout_height="50dip"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/about"
            android:textColor="#ffffff"
            android:textSize="20dip" />

        <Button
            android:id="@+id/login_in"
            android:layout_width="65.83dp"
            android:layout_height="30.5dp"
            android:layout_marginRight="10dp"
            android:focusable="false"
            android:textColor="#ffff"
            android:visibility="invisible" />
    </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin" >

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:background="#ffffff"
                    android:src="@drawable/tubiao" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:text="V 1.0.2016.4"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="#d5d5d8"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/check"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="#ffffff"
                    android:drawableLeft="@drawable/check"
                    android:gravity="center_vertical"
                    android:text="@string/jcgx"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/suggest"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="2dp"
                    android:background="#ffffff"
                    android:drawableLeft="@drawable/suggest"
                    android:gravity="center_vertical"
                    android:text="@string/yjfk"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/contact"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="2dp"
                    android:background="#ffffff"
                    android:drawableLeft="@drawable/contact"
                    android:gravity="center_vertical"
                    android:text="@string/lxkf"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/score"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginBottom="2dp"
                    android:layout_marginTop="2dp"
                    android:background="#ffffff"
                    android:drawableLeft="@drawable/changepwd"
                    android:gravity="center_vertical"
                    android:text="@string/gwdf"
                    android:textSize="15sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="bottom"
                android:layout_marginBottom="10dp" >

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_centerHorizontal="true"
                        android:gravity="center"
                        android:text="All Right Reserved"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/textView1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_above="@+id/textView2"
                        android:layout_centerHorizontal="true"
                        android:gravity="center"
                        android:text="©CopyRight2016- SecondBike 1.0"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_above="@+id/textView1"
                        android:layout_centerHorizontal="true"
                        android:gravity="center"
                        android:text="官网:www.SecondBike.com"
                        android:textSize="12sp" />
                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>

</LinearLayout>