<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/bike"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp"
    android:background="#ffffff"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.2"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/image"
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:focusable="false"
                android:src="@drawable/a" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/textview1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:editable="false"
                    android:focusable="false"
                    android:gravity="left"
                    android:text="@string/carname"
                    android:textSize="22sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:orientation="horizontal" >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" >

                    <TextView
                        android:id="@+id/price_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:editable="false"
                        android:text="@string/price"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:editable="false"
                        android:text="100.00"
                        android:textColor="#c84a36"
                        android:textSize="15sp" />
                </LinearLayout>

                <TextView
                    android:id="@+id/borrow_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:editable="false"
                    android:text="@string/rentlabel"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:orientation="horizontal" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/borrow_price_label"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:editable="false"
                        android:gravity="center"
                        android:text="月租:"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/borrow_price"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:editable="false"
                        android:gravity="center"
                        android:text="100.00"
                        android:textColor="#c84a36"
                        android:textSize="15sp" />
                </LinearLayout>

                <TextView
                    android:id="@+id/shangpingxiangqing"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_weight="1"
                    android:editable="false"
                    android:focusable="false"
                    android:gravity="right|center_vertical"
                    android:text="@string/cardetail"
                    android:textSize="12sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>